service-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
  namespace: prod
spec:
  type: NodePort
  ports:
    - targetPort: 8000
      port: 8000
      nodePort: 30002
  selector:
    app: apigateway-service
