ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: dailyon-alb
    alb.ingress.kubernetes.io/certificate-arn: ${AWS_CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
  namespace: prod
spec:
  ingressClassName: alb
  rules:
    - host: ${HOSTNAME}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: apigateway-service
                port:
                  number: 8000
    - host: ${ZIPKIN_HOSTNAME}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: zipkin-service
                port:
                  number: 9411
    - host: ${PROMETHEUS_HOSTNAME}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
    - host: ${GRAFANA_HOSTNAME}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
    - host: ${DISCOVERY_HOSTNAME}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: discovery-service
                port:
                  number: 8761
    - host: ${KUBEOPS_HOSTNAME}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-ops-view
                port:
                  number: 8080
